Remove the --module-path and add-modules hacks
In this branch
gradle run
Produces the "module not found: javafx.controls" error

module not found: javafx.graphics