@@ -32,52 +32,3 @@ dependencies {
     compile 'org.openjfx:javafx-controls:12.0.1:mac'
     compile 'org.openjfx:javafx-base:12.0.1:mac'
 }
-
-run {
-    doFirst {
-        applicationDefaultJvmArgs = [
-                '--module-path', sourceSets.main.runtimeClasspath.asPath,
-                '--add-modules', 'javafx.graphics,javafx.controls'
-        ]
-    }
-}
-
-distributions {
-    main {
-        applicationDefaultJvmArgs = [
-                // This is a nice feature of --module-path. No need to list jars anymore.
-                '--module-path', '@DOLLAR@APP_HOME/lib',
-                '--add-modules', 'javafx.graphics,javafx.controls'
-        ]
-    }
-}
-
-startScripts {
-    unixStartScriptGenerator = new DollarSignEscapeFixer(unixStartScriptGenerator)
-    // TODO: windowsStartScriptGenerator = ... test on windows
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.graphics,javafx.controls'
-        ]
-        classpath = files()
-    }
-}
-
-// Having $APP_HOME in applicationDefaultJvmArgs is impossible without this
-class DollarSignEscapeFixer implements ScriptGenerator {
-    private ScriptGenerator original
-
-    DollarSignEscapeFixer(ScriptGenerator original) {
-        this.original = original
-    }
-
-    void generateScript(JavaAppStartScriptGenerationDetails details, Writer destination) {
-        StringWriter writer = new StringWriter()
-        original.generateScript(details, writer)
-        destination.write(writer.toString().replaceAll("@DOLLAR@", "\\\$"))
-    }
-}
